# pub-daiily

./: .gitignore  README.md  ai.daily.md
C++-lang/: 24-essential-c++-interview-questions  50-experieced-c++-interview-questions  BlockingQueue.h  Cmakefile-intro  SyncQueue.h  c++Cmd  c-interview-questions  cplusplus-best-practices  cplusplus.threading  mid-c++-interview-questions  mutex-vs-semaphore
C++-lang/examples/: PrintNumberEnteredByUser.cpp  StopWatch.h  ex4.14.1.cpp  ex4.25.1.cpp  ex4.8.1.cpp  ex4.8.cpp  ex5.7.2.cpp  quiz1.1.cpp  quiz1.2.cpp
RTOS/: rtos.esp32.app  rtos.intro  rtos.ubuntu.core
ai-agents/ai-agent/: ai.agent.improve.llm.with.tools.md  ai.agent.intro.md  ai.agent.llm.in.the.loop.md  ai.agent.llm.workflows.md
ai-agents/claude-skills/: claude.skills.vs.mcp.md  create.claude.skills.using.cursor.md
ai-agents/cursor-IDE-agent/: cursor.agent.call.flow.details.md
ai-agents/mcp-server/: fastly.mcp.server.md  mcp-basics.md  mcp-example.md  yahoo.fantasy.mcp.server.md
ai-agents/stock-agent/: README.md  main.py  requirements.txt  stock_list.json
ai-agents/weather-agent/: .env.example  .gitignore  README.md  main.py
aws-playground/authorization/: authorization-token.py
aws-playground/aws-client/: athena-create-table.py  config.json  ec2-status.py  kinesisvideo-ingest.py  lambda-sqs-s3-textract.py  rekognition-access.py  requirements.txt  s3-access.py  s3-dowload.py  s3-latency.py  sagemaker.py  sqs-access.py  textract-access.py
aws-playground/docker-lambda-aws/: README.md  cdk.json  package.json  (+1 more)
bloodspot_query/: gene_expression_results.csv  gene_query.py
computer-vision-graphics/: blender-animation-software  camera-calibration  darknet-yolo-detection  deep-learning-in-opencv  facial-landmark-with-dlib-opencv-python  optical-flow  svm-intro
computer-vision-graphics/opencv/auto-cropping/: CMakeLists.txt  clear.sh  main_imageautocrop.cpp
computer-vision-graphics/opencv/auto-cropping/include/: ImageAutoCrop.h
computer-vision-graphics/opencv/auto-cropping/src/: ImageAutoCrop.cpp
computer-vision-graphics/opencv/camera-av-capture-test/: BlockingQueue.h  CMakeLists.txt  CameraCapture.h  GlRender.cpp  GlRender.h  camera_avfoundation.mm  clear.sh  main_cam.cpp
computer-vision-graphics/opencv/opencv-with-gcc-cmake/: CMakeLists.txt  camShift.cpp  clear.sh  displayImage.cpp  videoCapture.cpp  writeAlpha.cpp
gcp-playground/: container-gke.md  load-balancing.md  networking.md  resource-access-managment.md
misc/: ai.daily.md  ai.references.md  claude.code.workflow.md  crypto.daily.md  cursor.code.workflow.md  cursor.workflow.md  dev.daily.md
oo-design/: adapter.pattern  design.pattern  factory.pattern  observer.pattern  singleton.pattern
tele-surgery/: telesurgery.RTP.header  telesurgery.communication  telesurgery.communication.webrtc.client  telesurgery.intro  telesurgery.relevant.companies  telesurgery.robotics.control  telesurgery.rtp.gstreamer.integration  telesurgery.rtp.library.embedded.linux  telesurgery.stereoscopy.bandwidth  telesurgery.stereoscopy.srtp.protocol  telesurgery.stereoscopy.video
(+134 files in other folders)
